--- a/public/foods/index.html
+++ b/public/foods/index.html
@@ -66,13 +66,13 @@
     </div>
 
     <!-- Foods Section -->
-    <div class="text-left py-8 px-4">
+    <div class="text-left py-8 px-4 md:px-8 lg:px-16 xl:px-24">
         <h2 class="text-4xl font-bold text-gray-800 mb-2">Foods near you</h2>
         <p class="text-xl text-gray-600">Tailored to your taste:</p>
     </div>
 
     <!-- Food Cards Carousel -->
-    <div class="px-4 pb-12">
+    <div class="px-4 pb-12 md:px-8 lg:px-16 xl:px-24">
         <div class="flex overflow-x-auto space-x-4 pb-4 snap-x snap-mandatory scrollbar-hide">
             <!-- Card 1 -->
             <div class="flex-shrink-0 w-72 snap-center">
@@ -177,14 +177,14 @@
     </div>
 
     <!-- Marketing Hero Banners -->
-    <div class="px-4 pb-12">
+    <div class="px-4 pb-12 md:px-8 lg:px-16 xl:px-24">
         <!-- Banner 1 -->
         <div class="relative w-full h-[683px] rounded-2xl overflow-hidden mb-6" style="background-image: url('../img/happy_faces/n.png'); background-size: cover; background-position: center; background-repeat: no-repeat;">
             <div class="absolute inset-0 bg-black bg-opacity-30 flex items-center">
                 <div class="px-8 py-6 bg-white rounded-2xl max-w-lg mx-4">
-                    <h3 class="text-3xl font-bold mb-2 text-gray-800">Get subscription: Save over $530/mo</h3>
+                    <h2 class="text-4xl font-bold mb-2 text-gray-800">Get subscription: Save over $530/mo</h2>
                     <p class="text-lg mb-4 text-gray-600">Great food is better with company. Subscribe to your favorite local hosts and save big on home-cooked favorites. Average savings: $40/week.*</p>
-                    <button class="bg-blue-600 text-white font-semibold px-6 py-3 rounded-lg hover:bg-blue-700 transition-colors">Get it now</button>
+                    <button class="bg-blue-600 text-white font-semibold px-6 py-3 rounded-full hover:bg-blue-700 transition-colors">Get it now</button>
                 </div>
             </div>
         </div>
@@ -213,6 +213,55 @@
             </div>
         </div>
     </div>
+
+    <!-- Footer -->
+    <footer class="bg-gray-900 text-white py-12">
+        <div class="container mx-auto px-4">
+            <div class="grid grid-cols-1 md:grid-cols-4 gap-8">
+                <!-- Company Info -->
+                <div>
+                    <h3 class="text-xl font-bold mb-4">MealPrepify</h3>
+                    <p class="text-gray-400 mb-4">Connect with local hosts and enjoy home-cooked meals delivered fresh to your door.</p>
+                </div>
+
+                <!-- Quick Links -->
+                <div>
+                    <h3 class="text-xl font-bold mb-4">Quick Links</h3>
+                    <ul class="space-y-2">
+                        <li><a href="#" class="text-gray-400 hover:text-white transition-colors">About Us</a></li>
+                        <li><a href="#" class="text-gray-400 hover:text-white transition-colors">Our Hosts</a></li>
+                        <li><a href="#" class="text-gray-400 hover:text-white transition-colors">How It Works</a></li>
+                        <li><a href="#" class="text-gray-400 hover:text-white transition-colors">Pricing</a></li>
+                    </ul>
+                </div>
+
+                <!-- Support -->
+                <div>
+                    <h3 class="text-xl font-bold mb-4">Support</h3>
+                    <ul class="space-y-2">
+                        <li><a href="#" class="text-gray-400 hover:text-white transition-colors">FAQ</a></li>
+                        <li><a href="#" class="text-gray-400 hover:text-white transition-colors">Contact Us</a></li>
+                        <li><a href="#" class="text-gray-400 hover:text-white transition-colors">Privacy Policy</a></li>
+                        <li><a href="#" class="text-gray-400 hover:text-white transition-colors">Terms of Service</a></li>
+                    </ul>
+                </div>
+
+                <!-- Newsletter -->
+                <div>
+                    <h3 class="text-xl font-bold mb-4">Stay Updated</h3>
+                    <p class="text-gray-400 mb-4">Subscribe to get exclusive offers and updates.</p>
+                    <div class="flex">
+                        <input type="email" placeholder="Your email" class="flex-1 px-4 py-2 rounded-l-lg text-gray-800 focus:outline-none">
+                        <button class="bg-blue-600 hover:bg-blue-700 px-6 py-2 rounded-r-lg font-semibold transition-colors">Subscribe</button>
+                    </div>
+                </div>
+            </div>
+
+            <div class="border-t border-gray-800 mt-8 pt-8 text-center">
+                <p class="text-gray-400">&copy; 2026 MealPrepify. All rights reserved.</p>
+            </div>
+        </div>
+    </footer>
 
     <script>
         // Carousel Logic
