--- a/public/foods/index.html
+++ b/public/foods/index.html
@@ -181,8 +181,8 @@
         <!-- Banner 1 -->
         <div class="relative w-full h-[683px] rounded-2xl overflow-hidden mb-6" style="background-image: url('../img/happy_faces/n.png'); background-size: cover; background-position: center; background-repeat: no-repeat;">
             <div class="absolute inset-0 bg-black bg-opacity-30 flex items-center">
-                <div class="px-8 py-6 bg-white rounded-2xl max-w-lg mx-4">
-                    <h2 class="text-4xl font-bold mb-2 text-gray-800">Get subscription: Save over $530/mo</h2>
+                <div class="px-8 py-6 bg-white rounded-2xl max-w-lg mr-4 ml-16">
+                    <h2 class="text-4xl font-bold mb-6 text-gray-800">Get subscription: Save over $530/mo</h2>
                     <p class="text-lg mb-4 text-gray-600">Great food is better with company. Subscribe to your favorite local hosts and save big on home-cooked favorites. Average savings: $40/week.*</p>
                     <button class="bg-blue-600 text-white font-semibold px-6 py-3 rounded-full hover:bg-blue-700 transition-colors">Get it now</button>
                 </div>
