--- a/public/foods/index.html
+++ b/public/foods/index.html
@@ -5,6 +5,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Tailwind CSS Page</title>
     <script src="https://cdn.tailwindcss.com"></script>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Nunito:wght@400;600;700;800&display=swap" rel="stylesheet">
+    <style>
+        body {
+            font-family: 'Nunito', sans-serif;
+        }
+    </style>
 </head>
 <body class="bg-white min-h-screen">
     <!-- Hero Carousel -->
@@ -179,10 +187,10 @@
     <!-- Marketing Hero Banners -->
     <div class="px-4 pb-12 md:px-8 lg:px-16 xl:px-24">
         <!-- Banner 1 -->
-        <div class="relative w-full h-[683px] rounded-2xl overflow-hidden mb-6" style="background-image: url('../img/happy_faces/n.png'); background-size: cover; background-position: center; background-repeat: no-repeat;">
+        <div class="relative w-full h-[557px] rounded-2xl overflow-hidden mb-6" style="background-image: url('../img/happy_faces/n.png'); background-size: cover; background-position: center; background-repeat: no-repeat;">
             <div class="absolute inset-0 bg-black bg-opacity-30 flex items-center">
                 <div class="px-8 py-6 bg-white rounded-2xl max-w-lg mr-4 ml-16">
-                    <h2 class="text-4xl font-bold mb-6 text-gray-800">Get subscription: Save over $530/mo</h2>
+                    <h2 class="text-4xl font-bold mb-[26.4px] text-gray-800">Get subscription: Save over $530/mo</h2>
                     <p class="text-lg mb-4 text-gray-600">Great food is better with company. Subscribe to your favorite local hosts and save big on home-cooked favorites. Average savings: $40/week.*</p>
                     <button class="bg-blue-600 text-white font-semibold px-6 py-3 rounded-full hover:bg-blue-700 transition-colors">Get it now</button>
                 </div>
