--- a/public/foods/index.html
+++ b/public/foods/index.html
@@ -200,12 +200,24 @@
 
         <!-- Banner 2 -->
 
-        <section class="w-full rounded-xl border border-gray-200 bg-white p-6 md:p-10 shadow-sm">
+        <section class="w-full rounded-xl border border-gray-200 bg-white p-6 md:p-10 shadow-sm mt-12 mb-12">
   
   <div class="grid grid-cols-1 gap-8 md:grid-cols-3">
     
     <div class="flex items-start gap-4">
       <div class="flex h-12 w-12 shrink-0 items-center justify-center rounded-full bg-blue-600 text-white">
+        <svg 
+          viewBox="0 0 24 24" 
+          fill="currentColor" 
+          class="w-6 h-6" 
+          xmlns="http://www.w3.org/2000/svg"
+        >
+          <path 
+            fill-rule="evenodd" 
+            clip-rule="evenodd" 
+            d="M10.3 2.955a3 3 0 0 1 3.4 0l6.867 4.72A1 1 0 0 1 21 8.5V19a2 2 0 0 1-2 2h-4.5a1 1 0 0 1-1-1v-5h-3v5a1 1 0 0 1-1 1H5a2 2 0 0 1-2-2V8.5a1 1 0 0 1 .433-.824L10.3 2.955zm2.266 1.648a1 1 0 0 0-1.133 0L5 9.026V19h3.5v-5a1 1 0 0 1 1-1h5a1 1 0 0 1 1 1v5H19V9.026l-6.434-4.423z"
+          />
+        </svg>
         </div>
       <div class="flex flex-col gap-1">
         <h2 class="text-lg font-semibold text-gray-900 line-clamp-2">We know just the table</h2>
