--- a/public/foods/index.html
+++ b/public/foods/index.html
@@ -184,10 +184,127 @@
         </div>
     </div>
 
+
+
+<!-- new start -->
+  <!-- Foods Section -->
+    <div class="text-left py-8 px-4 md:px-8 lg:px-16 xl:px-24">
+        <h2 class="text-4xl font-bold text-gray-800 mb-2">Find your perfect real food</h2>
+        <!-- <p class="text-xl text-gray-600">Tailored to your taste:</p> -->
+    </div>
+
+    <!-- Food Cards Carousel -->
+    <div class="px-4 pb-12 md:px-8 lg:px-16 xl:px-24">
+        <div class="flex overflow-x-auto space-x-4 pb-4 snap-x snap-mandatory scrollbar-hide">
+            <!-- Card 1 -->
+            <div class="flex-shrink-0 w-72 snap-center">
+                <div class="bg-white rounded-t-3xl rounded-b-lg shadow-lg overflow-hidden">
+                    <div class="relative h-48 overflow-hidden mini-carousel" data-card="0">
+                        <img src="https://images.unsplash.com/photo-1626082927389-6cd097cdc6ec?w=400&h=300&fit=crop" alt="Grilled Salmon 1" class="carousel-img absolute inset-0 w-full h-full object-cover transition-opacity duration-300 opacity-100">
+                        <img src="https://images.unsplash.com/photo-1467003909585-2f8a72700288?w=400&h=300&fit=crop" alt="Grilled Salmon 2" class="carousel-img absolute inset-0 w-full h-full object-cover transition-opacity duration-300 opacity-0">
+                        <button class="mini-prev absolute left-2 top-1/2 transform -translate-y-1/2 bg-white bg-opacity-70 hover:bg-opacity-90 text-gray-800 p-1 rounded-full text-sm">‹</button>
+                        <button class="mini-next absolute right-2 top-1/2 transform -translate-y-1/2 bg-white bg-opacity-70 hover:bg-opacity-90 text-gray-800 p-1 rounded-full text-sm">›</button>
+                    </div>
+                    <div class="p-4">
+                        <h3 class="text-xl font-bold text-gray-800 mb-2">Grilled Salmon</h3>
+                        <p class="text-gray-600 mb-2">Fresh Atlantic salmon with herbs</p>
+                        <div class="flex justify-between items-center">
+                            <span class="text-2xl font-bold text-blue-600">$24.99</span>
+                            <button class="bg-blue-500 hover:bg-blue-700 text-white px-4 py-2 rounded-lg transition-colors">Add</button>
+                        </div>
+                    </div>
+                </div>
+            </div>
+
+            <!-- Card 2 -->
+            <div class="flex-shrink-0 w-72 snap-center">
+                <div class="bg-white rounded-t-3xl rounded-b-lg shadow-lg overflow-hidden">
+                    <div class="relative h-48 overflow-hidden mini-carousel" data-card="1">
+                        <img src="https://images.unsplash.com/photo-1600891964092-4316c288032e?w=400&h=300&fit=crop" alt="Garlic Butter Shrimp 1" class="carousel-img absolute inset-0 w-full h-full object-cover transition-opacity duration-300 opacity-100">
+                        <img src="https://images.unsplash.com/photo-1565680018434-b513d5e5fd47?w=400&h=300&fit=crop" alt="Garlic Butter Shrimp 2" class="carousel-img absolute inset-0 w-full h-full object-cover transition-opacity duration-300 opacity-0">
+                        <button class="mini-prev absolute left-2 top-1/2 transform -translate-y-1/2 bg-white bg-opacity-70 hover:bg-opacity-90 text-gray-800 p-1 rounded-full text-sm">‹</button>
+                        <button class="mini-next absolute right-2 top-1/2 transform -translate-y-1/2 bg-white bg-opacity-70 hover:bg-opacity-90 text-gray-800 p-1 rounded-full text-sm">›</button>
+                    </div>
+                    <div class="p-4">
+                        <h3 class="text-xl font-bold text-gray-800 mb-2">Garlic Butter Shrimp</h3>
+                        <p class="text-gray-600 mb-2">Succulent shrimp in rich garlic sauce</p>
+                        <div class="flex justify-between items-center">
+                            <span class="text-2xl font-bold text-blue-600">$18.99</span>
+                            <button class="bg-blue-500 hover:bg-blue-700 text-white px-4 py-2 rounded-lg transition-colors">Add</button>
+                        </div>
+                    </div>
+                </div>
+            </div>
+
+            <!-- Card 3 -->
+            <div class="flex-shrink-0 w-72 snap-center">
+                <div class="bg-white rounded-t-3xl rounded-b-lg shadow-lg overflow-hidden">
+                    <div class="relative h-48 overflow-hidden mini-carousel" data-card="2">
+                        <img src="https://images.unsplash.com/photo-1432139555190-58524dae6a55?w=400&h=300&fit=crop" alt="Lobster Tail 1" class="carousel-img absolute inset-0 w-full h-full object-cover transition-opacity duration-300 opacity-100">
+                        <img src="https://images.unsplash.com/photo-1532550907401-a500c9a57435?w=400&h=300&fit=crop" alt="Lobster Tail 2" class="carousel-img absolute inset-0 w-full h-full object-cover transition-opacity duration-300 opacity-0">
+                        <button class="mini-prev absolute left-2 top-1/2 transform -translate-y-1/2 bg-white bg-opacity-70 hover:bg-opacity-90 text-gray-800 p-1 rounded-full text-sm">‹</button>
+                        <button class="mini-next absolute right-2 top-1/2 transform -translate-y-1/2 bg-white bg-opacity-70 hover:bg-opacity-90 text-gray-800 p-1 rounded-full text-sm">›</button>
+                    </div>
+                    <div class="p-4">
+                        <h3 class="text-xl font-bold text-gray-800 mb-2">Lobster Tail</h3>
+                        <p class="text-gray-600 mb-2">Premium Maine lobster tail</p>
+                        <div class="flex justify-between items-center">
+                            <span class="text-2xl font-bold text-blue-600">$34.99</span>
+                            <button class="bg-blue-500 hover:bg-blue-700 text-white px-4 py-2 rounded-lg transition-colors">Add</button>
+                        </div>
+                    </div>
+                </div>
+            </div>
+
+            <!-- Card 4 -->
+            <div class="flex-shrink-0 w-72 snap-center">
+                <div class="bg-white rounded-t-3xl rounded-b-lg shadow-lg overflow-hidden">
+                    <div class="relative h-48 overflow-hidden mini-carousel" data-card="3">
+                        <img src="https://images.unsplash.com/photo-1626645738196-c2a7c87a8f58?w=400&h=300&fit=crop" alt="Seared Scallops 1" class="carousel-img absolute inset-0 w-full h-full object-cover transition-opacity duration-300 opacity-100">
+                        <img src="https://images.unsplash.com/photo-1626803775151-61d756612f97?w=400&h=300&fit=crop" alt="Seared Scallops 2" class="carousel-img absolute inset-0 w-full h-full object-cover transition-opacity duration-300 opacity-0">
+                        <button class="mini-prev absolute left-2 top-1/2 transform -translate-y-1/2 bg-white bg-opacity-70 hover:bg-opacity-90 text-gray-800 p-1 rounded-full text-sm">‹</button>
+                        <button class="mini-next absolute right-2 top-1/2 transform -translate-y-1/2 bg-white bg-opacity-70 hover:bg-opacity-90 text-gray-800 p-1 rounded-full text-sm">›</button>
+                    </div>
+                    <div class="p-4">
+                        <h3 class="text-xl font-bold text-gray-800 mb-2">Seared Scallops</h3>
+                        <p class="text-gray-600 mb-2">Pan-seared scallops with lemon</p>
+                        <div class="flex justify-between items-center">
+                            <span class="text-2xl font-bold text-blue-600">$28.99</span>
+                            <button class="bg-blue-500 hover:bg-blue-700 text-white px-4 py-2 rounded-lg transition-colors">Add</button>
+                        </div>
+                    </div>
+                </div>
+            </div>
+
+            <!-- Card 5 -->
+            <div class="flex-shrink-0 w-72 snap-center">
+                <div class="bg-white rounded-t-3xl rounded-b-lg shadow-lg overflow-hidden">
+                    <div class="relative h-48 overflow-hidden mini-carousel" data-card="4">
+                        <img src="https://images.unsplash.com/photo-1626803775151-61d756612f97?w=400&h=300&fit=crop" alt="Grilled Octopus 1" class="carousel-img absolute inset-0 w-full h-full object-cover transition-opacity duration-300 opacity-100">
+                        <img src="https://images.unsplash.com/photo-1600891964092-4316c288032e?w=400&h=300&fit=crop" alt="Grilled Octopus 2" class="carousel-img absolute inset-0 w-full h-full object-cover transition-opacity duration-300 opacity-0">
+                        <button class="mini-prev absolute left-2 top-1/2 transform -translate-y-1/2 bg-white bg-opacity-70 hover:bg-opacity-90 text-gray-800 p-1 rounded-full text-sm">‹</button>
+                        <button class="mini-next absolute right-2 top-1/2 transform -translate-y-1/2 bg-white bg-opacity-70 hover:bg-opacity-90 text-gray-800 p-1 rounded-full text-sm">›</button>
+                    </div>
+                    <div class="p-4">
+                        <h3 class="text-xl font-bold text-gray-800 mb-2">Grilled Octopus</h3>
+                        <p class="text-gray-600 mb-2">Tender octopus with olive oil</p>
+                        <div class="flex justify-between items-center">
+                            <span class="text-2xl font-bold text-blue-600">$26.99</span>
+                            <button class="bg-blue-500 hover:bg-blue-700 text-white px-4 py-2 rounded-lg transition-colors">Add</button>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+
+<!-- new end -->
+
+
     <!-- Marketing Hero Banners -->
     <div class="px-4 pb-12 md:px-8 lg:px-16 xl:px-24">
         <!-- Banner 1 -->
-        <div class="relative w-full h-[557px] rounded-2xl overflow-hidden mb-6" style="background-image: url('../img/happy_faces/n.png'); background-size: cover; background-position: center; background-repeat: no-repeat;">
+        <div class="relative w-full h-[557px] rounded-3xl overflow-hidden mb-6" style="background-image: url('../img/happy_faces/n.png'); background-size: cover; background-position: center; background-repeat: no-repeat;">
             <div class="absolute inset-0 bg-black bg-opacity-30 flex items-center">
                 <div class="px-8 py-6 bg-white rounded-2xl max-w-lg mr-4 ml-16">
                     <h2 class="text-4xl font-bold mb-[26.4px] text-gray-800">Get subscription: Save over $530/mo</h2>
@@ -293,7 +410,7 @@
 
 
         <!-- Banner 3 -->
-        <div class="relative w-full h-64 rounded-2xl overflow-hidden mb-6">
+        <div class="relative w-full h-64 rounded-3xl overflow-hidden mb-6">
             <img src="https://images.unsplash.com/photo-15593393524-4d01160291c1?w=1200&h=400&fit=crop" alt="Chef Special" class="w-full h-full object-cover">
             <div class="absolute inset-0 bg-gradient-to-r from-orange-900 to-orange-600 bg-opacity-75 flex items-center">
                 <div class="px-8 text-white">
@@ -305,7 +422,7 @@
         </div>
 
         <!-- Banner 4 --> 
-         <div class="relative w-full h-[557px] rounded-2xl overflow-hidden mb-6" style="background-image: url('../img/happy_faces/g.jpg'); background-size: cover; background-position: center; background-repeat: no-repeat;">
+         <div class="relative w-full h-[557px] rounded-3xl overflow-hidden mb-6" style="background-image: url('../img/happy_faces/g.jpg'); background-size: cover; background-position: center; background-repeat: no-repeat;">
             <div class="absolute inset-0 bg-black bg-opacity-30 flex items-center">
                 <div class="px-8 py-6 bg-white rounded-2xl max-w-[461px] mr-4 ml-16">
                     <h2 class="text-4xl font-bold mb-[26.4px] text-gray-800">Host your table confidently with InstaDelicious. </h2>
